--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "jquery": "^2.1.4",
+    "mongoose": "^4.3.4",
     "node": "^0.0.0",
     "underscore": "^1.8.3"
   },
